Parameters type profiling is not performed from aarch64 interpreter

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 10
    • Affects Version/s: 10
    • Component/s: hotspot
    • b36
    • aarch64

      There are no failing test configurations for this issue but it the data is not collected despite the fact InterpreterMacroAssembler::profile_parameters_type() is defined and implemented.

            Assignee:
            Dmitry Chuyko
            Reporter:
            Dmitry Chuyko
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: