8189439: Parameters type profiling is not performed from aarch64 interpreter

Reviewed-by: vlivanov